<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MeccaCenter</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="MAP_API">AIzaSyBkTnzeS5b2aPQfMKteXhjbagclnGeiGFI</string>
    <string name="Fajr">Fajr</string>
    <string name="Sunrise">Sunrise</string>
    <string name="Dhuhr">Dhuhr</string>
    <string name="Asr">Asr</string>
    <string name="Maghrib">Maghrib</string>
    <string name="Isha">Isha</string>
<string name="SenderId">463227117325</string>
    <string name="add_event">Add new event</string>
    <string name="event_name">Name</string>
    <string name="event_description">Description</string>
    <string name="event_date">Date</string>
    <string name="event_Photo">Photo for event</string>
    <string name="title_activity_donate">Donate</string>
    <string name="title_activity_show_event">Event</string>
    <string name="title_activity_notice">NoticeActivity</string>
</resources>
