<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >

        <android.support.v7.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/ToolBarStyle"
            android:id="@+id/toolbar"
            />
        <LinearLayout
            android:id="@+id/card_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#15000000"
            android:orientation="vertical" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:text="@string/event_name"

                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <TextView

                    android:id="@+id/tvEventNameError"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:text="@string/event_name"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

            </TableRow>

            <EditText
                android:id="@+id/EtNameAdd_event"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:maxLength="50"

                android:maxLines="1" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/event_description"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <TextView
                    android:id="@+id/tvDescriptionError"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/event_description"
                    android:textAppearance="?android:attr/textAppearanceMedium" />
            </TableRow>

            <EditText
                android:id="@+id/EtDescriptionAdd_Event"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textMultiLine"
                android:lines="3"
                android:scrollbars="vertical" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/event_date"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <TextView
                    android:id="@+id/tvDateTimeError"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"

                    />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <IconButton
                    android:id="@+id/EtDate_Add_Event"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".6"
                    android:text="Date {fa-sort}" />

                <IconButton
                    android:id="@+id/EtTime_Add_Event"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".4"

                    android:text="Time {fa-sort}" />


            </TableRow>
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/event_Photo"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <com.mecca_center.app.utils.UploadImage_
                android:id="@+id/UIAdd_Event"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:background="@color/primary" />
        </LinearLayout>

        <Button
            android:id="@+id/BTNSave_Add_event"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="Save" />

    </LinearLayout>
</ScrollView>